// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get tag transformer Возвращает трансформированный тег 1`] = `
Object {
  "blocks": Array [],
  "createdAt": 2021-06-03T16:26:11.000Z,
  "isArchived": true,
  "isHot": true,
  "isPartnership": true,
  "lastEditedAt": 2021-09-08T12:30:35.000Z,
  "metaDescription": "meta description",
  "metaTitle": "meta title",
  "mmm": "BMW,3ER",
  "partnershipBadgeName": "Бейдж партнера",
  "partnershipImage": null,
  "partnershipLink": "https://partnership-link.com",
  "partnershipName": "Партнер",
  "posts": null,
  "postsCount": 10,
  "shortTitle": "Концепты (short)",
  "title": "Концепты",
  "urlPart": "conceptcar",
}
`;

exports[`Get tag transformer Может возвращает тег с трансформированными черновыми блоками 1`] = `
Object {
  "blocks": Array [
    Object {
      "text": "i am transformed",
      "type": "text",
    },
  ],
  "createdAt": 2021-06-03T16:26:11.000Z,
  "isArchived": true,
  "isHot": true,
  "isPartnership": true,
  "lastEditedAt": 2021-09-08T12:30:35.000Z,
  "metaDescription": "meta description",
  "metaTitle": "meta title",
  "mmm": "BMW,3ER",
  "partnershipBadgeName": "Бейдж партнера",
  "partnershipImage": null,
  "partnershipLink": "https://partnership-link.com",
  "partnershipName": "Партнер",
  "posts": Object {},
  "postsCount": 10,
  "shortTitle": "Концепты (short, draft)",
  "title": "Концепты (draft)",
  "urlPart": "conceptcar",
}
`;

exports[`Get tag transformer Может возвращать тег с трансформированными блоками 1`] = `
Object {
  "blocks": Array [
    Object {
      "text": "i am transformed",
      "type": "text",
    },
  ],
  "createdAt": 2021-06-03T16:26:11.000Z,
  "isArchived": true,
  "isHot": true,
  "isPartnership": true,
  "lastEditedAt": 2021-09-08T12:30:35.000Z,
  "metaDescription": "meta description",
  "metaTitle": "meta title",
  "mmm": "BMW,3ER",
  "partnershipBadgeName": "Бейдж партнера",
  "partnershipImage": null,
  "partnershipLink": "https://partnership-link.com",
  "partnershipName": "Партнер",
  "posts": Object {},
  "postsCount": 10,
  "shortTitle": "Концепты (short)",
  "title": "Концепты",
  "urlPart": "conceptcar",
}
`;

exports[`Get tag transformer Может возвращать трансформированный черновик тега 1`] = `
Object {
  "blocks": Array [],
  "createdAt": 2021-06-03T16:26:11.000Z,
  "isArchived": true,
  "isHot": true,
  "isPartnership": true,
  "lastEditedAt": 2021-09-08T12:30:35.000Z,
  "metaDescription": "meta description",
  "metaTitle": "meta title",
  "mmm": "BMW,3ER",
  "partnershipBadgeName": "Бейдж партнера",
  "partnershipImage": null,
  "partnershipLink": "https://partnership-link.com",
  "partnershipName": "Партнер",
  "posts": null,
  "postsCount": 10,
  "shortTitle": "Концепты (short, draft)",
  "title": "Концепты (draft)",
  "urlPart": "conceptcar",
}
`;
